--- a/css/style.css
+++ b/css/style.css
@@ -902,7 +902,7 @@ h2 {
 
 .publishers {
     max-height: 480px;
-    margin: 80px auto;
+    margin: 120px auto;
     width: 100%;
 }
 .description h1 {
@@ -1309,7 +1309,7 @@ background-color: #f2fdff;;
     padding-bottom: 30px;
 }
 .rightpart {
-    margin-top: 40px;
+    margin-top: 100px;
     float: right;
     width: 50%;
 }
